Fix CSS: vertical-align: middle

--- a/src/www/themes/funky/css/theme-pages.css
+++ b/src/www/themes/funky/css/theme-pages.css
@@ -215,7 +215,7 @@
     border-width: 1px;
     border-collapse: collapse;
     text-align: left;
-    vertical-align: center;
+    vertical-align: middle;
 }
 
 .docmanDiv td, .docmanDiv th {
